[package]
name = "wotw"
version = "0.1.0"
edition = "2021"
authors = ["lnxwizard <lnxwizardreal@gmail.com>"]
description = "Weight Out of This World"
repository = "https://github.com/lnxwizard/wotw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
